# features2image_diffusion

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  README.md  build.rs  config.toml  guided-diffusion.toml  imagenet64_cond_270M_250K.toml  improved-diffusion.toml  index.html  interpolate.py  ml_requirements.txt  pyproject.toml  requirements.txt  sample.py  sweep.toml  tags.temp  tailwind.config.js  test.toml  train.toml
cmd/: build  gdp-sample  gdp-sample.py  preview  quarto.sh  sync-to  watch  workspace.json
doc/: _quarto.yml  ddpm.qmd  eqx-torch-comparison.qmd  exploratory data analysis-Copy1.ipynb  exploratory data analysis.ipynb  file_browser.html  generate-imagenet.ipynb  image-gen-on-edited-features.ipynb  look-at-image.ipynb  look-at-image.qmd  sample.ipynb  sample.qmd  show-images.ipynb  torch_ddpm_to_equinox.qmd  work-thus-far.qmd
features2image_diffusion/: __main__.py  data.py  eval.py  unet.py  vis.py
guided-diffusion-equinox/: resample.py
improved-diffusion-equinox/: __main__.py  script_util.py  train.py  unet.py
improved_diffusion_equinox/: __main__.py  fp16_util.py  gaussian_diffusion.py  image_datasets.py  losses.py  nn.py  respace.py  script_util.py  train.py  unet.py
jnb/: image-gen-on-edited-features.ipynb
pkg/: __tmp_dioxus_widget_iframe_zqf0evrk.html  features2image_diffusion_dioxus_widgets.d.ts  features2image_diffusion_dioxus_widgets.js  features2image_diffusion_dioxus_widgets_bg.wasm.d.ts  package.json  style.css
pkg/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
qmd/: _quarto.toml  look-at-image.html  look-at-image.qmd
read-result/: Cargo.toml
read-result/src/: f2id_fs.rs  lib.rs  list_paths.rs
src/: __main__.py  data.py  eval.py  f2id_fs.rs  feature_images.rs  file_browser.rs  files.json  lib.rs  main.rs  tailwind.css  unet.py  vis.py
web/: ddpm.html  exploratory data analysis-Copy1.html  exploratory data analysis.html  file_browser.html  files.bytes  generate-imagenet.html  image-gen-on-edited-features.html  index.html  look-at-image.html  search.json  show-images.html  tailwind.css  torch_ddpm_to_equinox.html
web/evcxr_pkg/feature-images/: ctx.js  ctx_bg.wasm  package.json
web/evcxr_pkg/feature-images/.cargo/: config.toml
web/evcxr_pkg/feature-images/snippets/dioxus-interpreter-js-4774033abde10986/: inline0.js
web/evcxr_pkg/feature-images/snippets/dioxus-interpreter-js-e8d4f2300616f4bc/: inline0.js
web/evcxr_pkg/feature-images/src/: lib.rs
web/evxcr_pkg/test/: ctx.js  ctx_bg.wasm
widget/: Cargo.toml
widget/src/: feature_images.rs  file_browser.rs  lib.rs
