[package]
name = "feature2image_diffusion-dioxus-widgets"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
jupyter-and-dioxus = { git = "https://github.com/JJJHolscher/jupyter-and-dioxus" }
chrono = { version = "0.4.33", features = ["serde"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus", rev = "dc5e4e3738ac80cb3e333a10340674b575c95abd" }
serde = "1.0.196"
serde_json = "1.0.113"
wasm-bindgen = "0"
web-sys = { version = "0.3.67", features = ["HtmlElement", "Element", "Node"] }

[build-dependencies]
serde_json = "1.0.113"
