[package]
name = "feature2image_diffusion-dioxus-widgets"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
jupyter-and-dioxus = { git = "https://github.com/JJJHolscher/jupyter-and-dioxus" }
chrono = { version = "0.4.33", features = ["serde"] }
dioxus = "0.4.3"
dioxus-core = "0.4.3"
dioxus-web = "0.4.3"
serde = "1.0.196"
serde_json = "1.0.113"
wasm-bindgen = "0"
web-sys = { version = "0.3.67", features = ["HtmlElement", "Element", "Node"] }

[build-dependencies]
serde_json = "1.0.113"
