[package]
name = "features2image_diffusion-dioxus-widgets"
version = "0.0.1"
edition = "2021"
include = [
    "src/*.rs",
    "Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
jupyter-and-dioxus = { git = "https://github.com/JJJHolscher/jupyter-and-dioxus" }
chrono = { version = "0.4.33", features = ["serde"] }
dioxus = "0.4.3"
dioxus-web = "0.4.3"
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
wasm-bindgen = "<0.2.91"
web-sys = { version = "0.3.67", features = ["HtmlElement", "Element", "Node"] }
dioxus-router = "0.4.3"
serde_qs = "0.12.0"
itertools = "0.12.1"
collect_slice = "1.2.0"
console_log = "1.0.0"
log = "0.4.20"
tao-log = "1.0.1"
ndarray = "0.15.6"
strum = { version = "0.26.1", features = ["derive"] }

[build-dependencies]
serde_json = "1.0.113"
